<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_presto_name">Presto Utilities RC3</string>
    <string name="backup_title">BACKUP</string>
    <string name="app_backup_name">Presto Backup RC1</string>
    <string name="start_backup_button">Start Backup</string>
    <string name="backup_settings">Settings</string>
    <string name="check_massive_copy_method">Check it to use Massive Copy Method</string>
    <string name="massive_copy_method">Massive Copy Method</string>
    <string name="enable_massive_copy_method">Enable Massive Copy Method</string>
    <string name="restore_title">RESTORE</string>
    <string name="app_restore_name">Presto Restore RC1</string>
    <string name="start_restore_button">Start Restore</string>
    <string name="restore_settings">Settings</string>
    <string name="check_direct_install_method">Check it to use Direct Install Method</string>
    <string name="direct_install_method">Direct Install Method</string>
    <string name="enable_direct_install_method">Enable Direct Install Method</string>
    <string name="custom_backup_directory">Custom Backup Directory</string>
    <string name="restore_sort_settings">Sort List Settings</string>
    <string name="restore_sample_pref_sel_dialog_type">Sort Type</string>
    <string name="restore_sample_pref_click_pop_up_type">Select sort list type</string>
    <string name="restore_sample_pref_choose_number_type">Select method:</string>
    <string-array name="restore_numbersType">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="restore_numbernamesType">
        <item>Application Name</item>
        <item>Package Name</item>
    </string-array>
    <string name="restore_sample_pref_sel_dialog_order">Sort Order</string>
    <string name="restore_sample_pref_click_pop_up_order">Select sort list order</string>
    <string name="restore_sample_pref_choose_number_order">Select order:</string>
    <string-array name="restore_numbersOrder">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="restore_numbernamesOrder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="otdshco">\n\nOTDS H Co.\n\n</string>
    <string name="space">\n\n</string>
    <string name="selected">You selected: </string>
    <string name="description">description</string>
    <string name="boot_logo_title">BOOT LOGO</string>
    <string name="app_bootlogo_name">Boot Logo Replacer RC1</string>
    <string name="bootlogo_change_button">Change</string>
    <string name="uninstall_title">UNINSTALL</string>
    <string name="app_uninstall_name">Presto Uninstall RC1</string>
    <string name="start_uninstall_button">Start Uninstall</string>
    <string name="uninstall_settings">Settings</string>
    <string name="check_direct_uninstall_method">Check it to use Direct Uninstall Method</string>
    <string name="direct_uninstall_method">Direct Uninstall Method</string>
    <string name="enable_direct_uninstall_method">Enable Direct Uninstall Method</string>
    <string name="uninstall_sort_settings">Sort List Settings</string>
    <string name="uninstall_sample_pref_sel_dialog_type">Sort Type</string>
    <string name="uninstall_sample_pref_click_pop_up_type">Select sort list type</string>
    <string name="uninstall_sample_pref_choose_number_type">Select method:</string>
    <string-array name="uninstall_numbersType">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="uninstall_numbernamesType">
        <item>Application Name</item>
        <item>Package Name</item>
        <item>Package Size</item>
    </string-array>
    <string name="uninstall_sample_pref_sel_dialog_order">Sort Order</string>
    <string name="uninstall_sample_pref_click_pop_up_order">Select sort list order</string>
    <string name="uninstall_sample_pref_choose_number_order">Select order:</string>
    <string-array name="uninstall_numbersOrder">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="uninstall_numbernamesOrder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="file_manager_title">FILE MANAGER</string>
    <string name="list_item">List Item </string>
</resources>
